--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
   }
   body {
     background-size: 700px;
-    background-repeat: no-repeat;
+    /* background-repeat: no-repeat; */
   }
 }
 @media (min-width: 62rem) {
