--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
   background-size: 1500px;
   background-position-x: center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 h1 {
