--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Poppins", sans-serif;
   background: white;
-  background-size: 1500px;
+  background-size: auto cover;
   background-position-x: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
