--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,14 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
+@media only screen and (min-width: 992px) {
+  body {
+    background-size: 1400px;
+    background-position-x: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+  }
+}
 
 h1 {
   color: #2c3639;
