--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ a.dark-mode {
 }
 
 .cur-date {
-  font-size: 14px;
+  font-size: 16px;
   text-align: left;
   padding: 0 0 20px 60px;
 }
@@ -180,7 +180,7 @@ h2.dark-mode,
 }
 
 .fu-icon {
-  font-size: 25px;
+  width: 50px;
 }
 
 .unit-button {
